src/assets/layout/sass/_main.scss
* {
    box-sizing: border-box;
}

html {
    height: 100%;
    font-size: $fontSize;
}

body {
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
    font-size: $fontSize;
    color: $textColor;
    background-color: $bodyBgColor;
    margin: 0;
    padding: 0;
    min-height: 100%;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

a {
    text-decoration: none;
    color: #2196f3;
}

.layout-wrapper {
    padding: 0;
    display: flex;
    flex-direction: column;
    flex-order-: space-between;
    min-height: 100vh;
}

.p-datatable .p-datatable-thead > tr > th {
    background: transparent;
}

.p-datatable .p-datatable-header {
    background: transparent;
    border-bottom: 1px solid #e9ecef;
    border-top: transparent;
}

.p-treetable .p-treetable-header {
    background: transparent;
}

.p-treetable .p-treetable-thead > tr > th {
    background: transparent;
}
.p-tabview .p-tabview-nav li .p-tabview-nav-link:not(.p-disabled):focus{
    box-shadow: none;
}

.card-title {
    color: #495057;
    font-weight: 500;
    margin-bottom: .7rem;
}

.p-menubar,.p-toolbar{
    background: #fff;
}
.p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-content .p-menuitem-link:hover{
    background: #d0f1ff;
}

.customer-badge {
    border-radius: 2px;
    padding: 0.25em 0.5rem;
    text-transform: uppercase;
    font-weight: 700;
    font-size: 12px;
    letter-spacing: 0.3px;

    &.status-1 {
        background: #b3e5fc;
        color: #23547b;
    }

    &.status-2 {
        background: #eccfff;
        color: #694382;
    }

    &.status-3 {
        background: #c8e6c9;
        color: #256029;
    }

    &.status-4 {
        background: #ffcdd2;
        color: #c63737;
    }

    &.status-5 {
        background: #ff3838;
        color: #ffffff;
    }

    &.status-6 {
        background: #feedaf;
        color: #8a5340;
    }

    &.status-7 {
        background: #c8e6c9;
        color: #256029;
    }

    &.status-8 {
        background: #eccfff;
        color: #694382;
    }
    &.status-9 {
        background: #eccfff;
        color: #694382;
    }

    &.status-10 {
        background: #c8e6c9;
        color: #256029;
    }

    &.status-11 {
        background: #ffcdd2;
        color: #c63737;
    }

    &.status-12 {
        background: #ffd8b2;
        color: #805b36;
    }

    &.status-negotiation {
        background: #feedaf;
        color: #8a5340;
    }

    &.status-proposal {
        background: #ffd8b2;
        color: #805b36;
    }

    &.online {
        background: #c8e6c9;
        color: #256029;
    }

    &.offline {
        background: #ffcdd2;
        color: #c63737;
    }

    &.status-vaccinated {
        background: #c8e6c9;
        color: #256029;
    }
    &.status-firstcomponent {
        background: #b3e5fc;
        color: #23547b;
    }
    &.status-noData {
        background: #ffcdd2;
        color: #c63737;
    }
    &.status-rejected {
        background: #feedaf;
        color: #ff0000;
    }
    &.status-planned {
        background: #eccfff;
        color: #694382;
    }
    &.status-minor {
        background: #a2fcfc;
        color: #00f7f7;
    }
    &.status-created {
        background: #B3E5FC;
        color: #23547B;
    }
    &.status-signing {
        background: #17a2b8;
        color: #fff;
    }
    &.status-signed {
        background: #28a745;
        color: #fff;
    }
    &.status-inapproval {
        background: #9317b8;
        color: #ffffff;
    }
    &.status-approved {
        background: #007bff;
        color: #ffffff;
    }
    &.status-revision {
        background: #ffcdd2;
        color: #c63737;
    }

}

